# signature-builder

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/downloader/: download_commons.rs  download_virusshare.rs  mod.rs  virusshare.rs
src/organizer/: database.rs  files.rs  logic.rs  mod.rs
